fixed problem in testimonials section with stretch of feedbacks__block-text

--- a/css/index-common.css
+++ b/css/index-common.css
@@ -36,6 +36,10 @@ img {
     width: 100%;
 }
 
+section {
+    overflow: hidden;
+}
+
 /* for every block (you wrap all your content after tag section) */
 .container {
     max-width: 1200px;
